MP2-2278 fixed alignment and translation toggle, activity header section C.4 and hide work plan tab for no data

--- a/jems-ui/src/app/project/project-application/report/partner-report-work-plan-progress-tab/partner-report-work-plan-progress-tab.component.scss
+++ b/jems-ui/src/app/project/project-application/report/partner-report-work-plan-progress-tab/partner-report-work-plan-progress-tab.component.scss
@@ -19,11 +19,12 @@
     min-width: 70rem !important;
 
    span:nth-child(2) {
-      padding-left: 10vw;
+     padding-left: 5.5vw;
+     padding-right: 15rem;
     }
 
    span:last-child {
-      padding-left: 22vw;
+     padding-left: 4.5vw;
     }
   }
 
